<resources>
    <string name="back">back</string>
    <string name="rfcx_companion">Arbimon Companion</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_sign_in_button_label">Sign In</string>
    <string name="powered_by">Powered by</string>
    <string name="pls_fill_email">Missing Email</string>
    <string name="pls_fill_password">Missing Password</string>
    <string name="connect_with_google">Login with Google</string>
    <string name="or">OR</string>
    <string name="ok">OK</string>
    <string name="format_deploy_uploading">Syncing a deployment</string>
    <string name="format_deploys_uploading">Syncing %s deployments</string>
    <string name="format_deploy_waiting_network">Unable to sync while there is no connection</string>
    <string name="format_deploys_uploaded">All deployments synced</string>
    <string name="menu_map">MAP</string>
    <string name="menu_profile">PROFILE</string>
    <string name="setup_first_device">Welcome! %s \nGet started by adding your first \nArbimon device</string>
    <string name="let_configure">Let’s configure the device</string>
    <string name="sample_rate">Sample Rate</string>
    <string name="gain">Gain</string>
    <string name="sleep_duration">Sleep (seconds)</string>
    <string name="recording_duration">Recording (seconds)</string>
    <string name="profile_name">Profile Name (optional)</string>
    <string name="recording_duration_title">Recording Duration</string>
    <string name="choose_sample_rate">Sample Rate (kHz)</string>
    <string name="choose_gain">Gain</string>
    <string name="kilohertz">%s kHz</string>
    <string name="continuous">Continuous</string>
    <string name="custom_recording_period">Custom Recording Period</string>
    <string name="always_recording">Always Recording</string>
    <string name="recommended">Recommended</string>
    <string name="custom">Custom</string>
    <string name="recommended_text">Record for 5 minutes, sleep for 10 minutes</string>
    <string name="edge_device_battery">Arbimon Edge device battery</string>
    <string name="minimum_1_second">The minimum is 1 second</string>
    <string name="minimum_5_second">The minimum is 5 seconds</string>
    <string name="sync">Sync</string>
    <string name="no_retry">TRY AGAIN</string>
    <string name="yes">Yes</string>
    <string name="ok_complete">OK, COMPLETE</string>
    <string name="ready_send_configuration">Ready to synchronize using tone</string>
    <string name="switch_to_off">Switch device to \"OFF\" and place near your phone</string>
    <string name="switch_to_custom">Move switch to \"CUSTOM\" while initial tone is playing</string>
    <string name="solid_red_flashing_green">Do you see a solid red LED and flashing green LED?</string>
    <string name="ready_to_sync">You are ready to sync your device</string>
    <string name="the_end">At the end of the tone you should \nhave seen the solid green LED for 1 second</string>
    <string name="should_see">Now you should see either flashing \nred (recording) or flashing green (sleeping)</string>
    <string name="play_initial_tone">play initial tone</string>
    <string name="play_sync_tone">play sync tone</string>
    <string name="syncing_instruction">Having problems</string>
    <string name="title_deployment_detail">Site name</string>
    <string name="sleep_duration_title">Sleep duration</string>
    <string name="estimated_battery_duration">Estimated battery remaining</string>
    <string name="photos">Photos</string>
    <string name="detail_sec">%d second</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_location">Delete deployment?</string>
    <string name="deployment_key">Deployment ID</string>
    <string name="are_you_sure_delete_location">The device will be removed</string>
    <string name="test">test</string>
    <string name="skip">Skip</string>
    <string name="it_full">or, if it is full then:</string>
    <string name="red_flash">How many time did the red LED flash?</string>
    <string name="try_again">try again</string>
    <string name="device_configured">Device configured! \nNow let’s verify the battery level</string>
    <string name="days">Estimated battery duration: %s days</string>
    <string name="day">Estimated battery duration: %s day</string>
    <string name="notification">A notification will be sent a day \nbefore the battery is due to run out</string>
    <string name="too_low_battery">The battery level is too low \nto estimate the recording duration</string>
    <string name="recharge_or_replace">Recharge or replace the batteries \nfor a longer recording duration</string>
    <string name="recharging">Batteries need recharging!</string>
    <string name="setting_up_edge_checklist">AudioMoth Setup Checklist</string>
    <string name="setup">Setup</string>
    <string name="optional">Optional</string>
    <string name="set_deployment_site">Set deployment site</string>
    <string name="synchronize_with_audioMoth">Synchronize with AudioMoth</string>
    <string name="add_photo">Take Photos</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="finish">finish</string>
    <string name="name_location">Site name</string>
    <string name="new_location">New site</string>
    <string name="existing">Existing</string>
    <string name="next">Next</string>
    <string name="use_your_current_location">Use current location</string>
    <string name="change">change</string>
    <string name="choose">Choose</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_default">0.0</string>
    <string name="altitude_digits">0123456789.</string>
    <string name="within">You are currently within 20m of the site</string>
    <string name="more_than">You are %s from the site</string>
    <string name="set_hardware_switch_to_off">Set hardware switch to OFF</string>
    <string name="set_hardware_switch_to_custom">Set hardware switch to CUSTOM</string>
    <string name="lights_audiomoth">Lights on AudioMoth should be: \nSOLID RED &amp; FLASHING GREEN</string>
    <string name="move_phone_near">Move phone near to AudioMoth</string>
    <string name="keep_phone_near">Keep phone near to AudioMoth</string>
    <string name="sync_in_progress">Sync to AudioMoth in progress</string>
    <string name="begin_sync">Begin Sync</string>
    <string name="sync_audiomoth">Sync to AudioMoth</string>
    <string name="one">1)</string>
    <string name="two">2) Do you hear a loud audio tone?\n(check if volume is too low or in silent mode)</string>
    <string name="three">3)</string>
    <string name="four">4)</string>
    <string name="five">5)</string>
    <string name="six">6) Confirm that the RED light is NOT SOLID</string>
    <string name="one_text">1) Sync with AudioMoth started...</string>
    <string name="two_text">2) Initial audio tone playing...</string>
    <string name="three_text">3) Hardware switch set to CUSTOM</string>
    <string name="four_text">4) AudioMoth Lights are:</string>
    <string name="four_text_two">FLASHING GREEN &amp; SOLID RED</string>
    <string name="five_text">5) Profile sent to AudioMoth</string>
    <string name="no">No</string>
    <string name="repeat_sound">Repeat syncing sound</string>
    <string name="select">Select</string>
    <string name="selected_location">Selected location</string>
    <string name="please_fill_information">Site name is required.</string>
    <string name="altitude_is_required">Altitude is required.</string>
    <string name="no_result_found">No result found</string>
    <string name="not_have_sites">There are no sites in this project.</string>
    <string name="use_an_existing">Use an existing profile</string>
    <string name="or_create_new">or create new</string>
    <string name="can_not_get_profiles">Unable to download your profiles. \nPlease try again.</string>
    <string-array name="gainLabel">
        <item>Lowest</item>
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Highest</item>
    </string-array>
    <string name="profile_aditional_label">Additional</string>
    <string name="profile_app_version_label">App version</string>
    <string name="account">Account</string>
    <string name="profile_sign_out_label">Sign out</string>
    <string name="version_app">%s (%s)</string>
    <string name="profile_feedback_label">Feedback</string>
    <string name="profile_offline_map_label">Offline map</string>
    <string name="coordinates">Coordinates</string>
    <string name="location">Site</string>
    <string name="display">Display</string>
    <string name="theme">Theme</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="system_default">System default</string>
    <string name="location_group">Project</string>
    <string name="create_new_group">Create new project</string>
    <string name="select_a_color">Select a color</string>
    <string name="missing_name_group">Missing name project</string>
    <string name="none">None</string>
    <string name="projects">All projects</string>
    <string name="group_already_exists">The project already exists</string>
    <string name="dd_coordinates">DD</string>
    <string name="ddm_coordinates">DDM</string>
    <string name="dms_coordinates">DMS</string>
    <string name="dd_coordinates_format">0.00000°N 0.00000°E</string>
    <string name="ddm_coordinates_format">0°0.0000\'N 0°0.0000\'E</string>
    <string name="dms_coordinates_format">0°0\'0.0\"N 0°0\'0.0\"E</string>
    <string name="delete_location_group_title">Do you want to delete this project?</string>
    <string name="connecting_up">Searching for Nearby\n Guardians</string>
    <string name="connect">Connect</string>
    <string name="retry">Retry</string>
    <string name="prefs_value_default_api_rest_host">api.rfcx.org</string>
    <string name="prefs_value_default_api_rest_protocol">https</string>
    <string name="prefs_value_default_api_checkin_host">api-mqtt.rfcx.org</string>
    <string name="prefs_value_default_api_checkin_protocol">ssl</string>
    <string name="prefs_value_default_api_checkin_port">8883</string>
    <string name="prefs_value_default_api_ntp_host">time.apple.com</string>
    <string name="prefs_value_default_api_sms_address">+14154803657</string>
    <string name="prefs_value_default_reboot_forced_daily_at">23:54:00</string>
    <string name="prefs_value_default_audio_cycle_duration">90</string>
    <string name="prefs_value_default_audio_schedule_off_hours">23:56-23:58,23:58-00:00</string>
    <string name="prefs_value_default_audio_encode_codec">opus</string>
    <string name="prefs_value_default_audio_encode_bitrate">28672</string>
    <string name="prefs_value_default_audio_sample_rate">24000</string>
    <string name="prefs_value_default_checkin_battery_cutoff">90</string>
    <string name="prefs_value_default_audio_battery_cutoff">80</string>
    <string name="prefs_value_default_checkin_failure_thresholds">12,25,40,60,80</string>
    <string name="prefs_value_default_checkin_skip_threshold">5</string>
    <string name="prefs_value_default_checkin_stash_threshold">240</string>
    <string name="prefs_value_default_checkin_archive_threshold">160</string>
    <string name="prefs_value_default_admin_log_capture_level">Warn</string>
    <string name="prefs_value_default_admin_log_capture_cycle">30</string>
    <string name="prefs_value_default_admin_screenshot_capture_cycle">180</string>
    <string name="prefs_value_default_admin_system_timezone">[ Not Set ]</string>
    <string name="let_s_register_your_guardian">Let\'s Register your Guardian</string>
    <string name="production">Production</string>
    <string name="staging">Staging</string>
    <string name="register">Register</string>
</resources>