<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerTextView"
        style="@style/AudioMothText.Subhead.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_padding_normal"
        android:text="@string/let_s_register_your_guardian"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="@dimen/margin_padding_large"
        android:layout_marginEnd="@dimen/margin_padding_large"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/registerTextView" />

    <RadioGroup
        android:id="@+id/registerRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/margin_padding_large"
        android:paddingTop="@dimen/margin_padding_small"
        android:paddingEnd="@dimen/margin_padding_large"
        app:layout_constraintTop_toBottomOf="@id/divider">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/productionRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/production"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_small" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/stagingRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/staging"
            android:textColor="@color/text_primary"
            android:textSize="@dimen/text_small" />
    </RadioGroup>

    <TextView
        android:id="@+id/registerResultTextView"
        style="@style/AudioMothText.Body.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/registerFinishButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerRadioGroup"
        tools:text="Your guardian is already registered" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerFinishButton"
        style="@style/AudioMothButton.GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_large"
        android:layout_marginEnd="@dimen/margin_padding_large"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerGuardianButton"
        style="@style/AudioMothButton.GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_large"
        android:layout_marginEnd="@dimen/margin_padding_large"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
