<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nearbySongMeterTextView"
        style="@style/AudioMothText.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_padding_normal"
        android:textAlignment="center"
        android:text="@string/connecting_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/songMeterRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_padding_large"
        android:layout_marginTop="@dimen/margin_padding_normal"
        android:layout_marginEnd="@dimen/margin_padding_large"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        app:layout_constraintBottom_toTopOf="@id/connectSongMeterButton"
        app:layout_constraintTop_toBottomOf="@id/nearbySongMeterTextView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/connectSongMeterButton"
        style="@style/AudioMothButton.GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_large"
        android:layout_marginEnd="@dimen/margin_padding_large"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:enabled="false"
        android:text="@string/connect"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/retryScanButton"
        style="@style/AudioMothButton.GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_padding_large"
        android:layout_marginEnd="@dimen/margin_padding_large"
        android:layout_marginBottom="@dimen/margin_padding_normal"
        android:text="@string/retry"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
